<resources>
    <string name="app_name" translatable="false">Application</string>
    <string name="timetable">Timetable</string>
    <string name="notifications">Notifications</string>

    <!-- Main menu -->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="news">News</string>
    <string name="deadlines">Deadlines</string>

    <!-- Timetable Item -->
    <string name="offline" translatable="false">Offline</string>
    <string name="online" translatable="false">Online</string>

    <!-- Timetable -->
    <string name="there_is_no_timetable">There is no timetable</string>

    <!-- User profile -->
    <string name="info">Info</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>

    <string name="hello">Hello, </string>
    <string name="grades">Grades</string>
    <string name="ratings">Ratings</string>
    <string name="system_settings">System settings</string>
    <string name="about_the_app">About the app</string>
    <string name="log_out">Log out</string>
    <string name="exams">Exams</string>
    <string name="edu_certificate">Ordering a study certificate</string>
    <string name="visitations">Visitations</string>
    <string name="show_completed_deadlines">Show completed deadlines</string>
    <string name="next_class">Next class</string>
    <string name="discipline">Discipline</string>
    <string name="e_g_do_homework">e.g. Do homework</string>
    <string name="description">Description</string>
    <string name="no_date">No date</string>
    <string name="course_information">Course information</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="phone_number">Phone number</string>
    <string name="day_of_birth">Day of birth</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_time">Choose time</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next week</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
</resources>